Reset button fix by adding an extra z index.
Because every .fruits  are stretching across the top screen area. They have a higher stack order, acting like an invisible glass pane over the header that intercepts all mouse clicks.... 

Adding a z-index to .head to forces the button to sit on top of the fruit elements....

--- a/Game.css
+++ b/Game.css
@@ -181,6 +181,9 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* Reset button fix */
+    position: relative;
+    z-index: 10;
 }
 #hh{
     font-weight: 700px;
